ConnectionGraph::unique_java_object(Node* N) return NULL if n is not in the CG

XMLWordPrintable

    • b14
    • generic
    • generic

        In https://bugs.openjdk.java.net/browse/JDK-8230363
        a graceful return has been added to method ConnectionGraph::not_global_escape(Node* n) if n is not in the CG .
        However a similar case exists in ConnectionGraph::unique_java_object .

        Not all ideal nodes are added to the connection graph, it will result in a crash, though, if a node n that was not added to the connection graph is passed to ConnectionGraph::unique_java_object(Node* n).
        This case should be handled more gracefully by returning NULL .

              Assignee:
              Matthias Baesken
              Reporter:
              Matthias Baesken
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: