8230711: ConnectionGraph::unique_java_object(Node* N) return NULL if n is not in the CG

Reviewed-by: mdoerr